<?xml version="1.0"?>
<package format="3">
  <name>omni_base_bringup</name>
  <version>0.0.10</version>
  <description>The omni_base_bringup package</description>
  <author email="yue.erro@pal-robotics.com">Yue Erro</author>
  <author email="andrea.capodacqua@pal-robotics.com">Andrea Capodacqua</author>
  <maintainer email="yue.erro@pal-robotics.com">Yue Erro</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <exec_depend>joy</exec_depend>
  <exec_depend>joy_teleop</exec_depend>
  <exec_depend>launch_pal</exec_depend>
  <exec_depend>omni_base_controller_configuration</exec_depend>
  <exec_depend>omni_base_description</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>robot_control</exec_depend>
  <exec_depend>omni_base_2dnav</exec_depend>
  <exec_depend>speed_limit_node</exec_depend>
  <exec_depend>twist_mux</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
