<?xml version="1.0"?>
<package format="2">
  <name>omni_base_controller_configuration</name>
  <version>0.0.10</version>
  <description>The omni_base_controller_configuration package</description>

  <maintainer email="antonio.brandi@pal-robotics.com">Antonio Brandi</maintainer>

  <license>Proprietary</license>

  <author email="sai.kishor@pal-robotics.com">Sai Kishor Kothakota</author>
  <author email="antonio.brandi@pal-robotics.com">Antonio Brandi</author>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>controller_manager</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>imu_sensor_controller</exec_depend>
  <exec_depend>omni_drive_controller</exec_depend>

</package>
