<?xml version="1.0"?>
<package format="3">
  <name>omni_base_controller_configuration</name>
  <version>2.0.3</version>
  <description>The omni_base_controller_configuration package</description>
  <author email="yue.erro@pal-robotics.com">Yue Erro</author>
  <author email="andrea.capodacqua@pal-robotics.com">Andrea Capodacqua</author>
  <maintainer email="yue.erro@pal-robotics.com">Yue Erro</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <build_depend condition="$PAL_DISTRO >= alum">pal_module_cmake</build_depend>

  <exec_depend>controller_manager</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>imu_sensor_broadcaster</exec_depend>
  <exec_depend condition="$PAL_DISTRO >= alum">omni_drive_controller</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
