<?xml version="1.0"?>
<package format="2">
  <name>omni_base_description</name>
  <version>0.0.8</version>
  <description>This package contains the description (mechanical, kinematic, visual,
      etc.) of the omni_base robot.  The files in this package are parsed and used by
      a variety of other components.  Most users will not interact directly
      with this package.</description>
  <maintainer email="antonio.brandi@pal-robotics.com">Antonio Brandi</maintainer>
  <author email="sai.kishor@pal-robotics.com">Sai Kishor Kothakota</author>
  <author email="antonio.brandi@pal-robotics.com">Antonio Brandi</author>
  <license>Creative Commons BY-NC-ND 3.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>xacro</exec_depend>
  <exec_depend>pmb2_description</exec_depend>
  <exec_depend>hector_gazebo_plugins</exec_depend>

  <test_depend>rostest</test_depend>
  <test_depend>urdf_test</test_depend>

</package>
