<?xml version="1.0"?>
<package format="3">
  <name>omni_base_description</name>
  <version>2.0.1</version>
  <description>This package contains the description (mechanical, kinematic, visual,
      etc.) of the omni_base robot.  The files in this package are parsed and used by
      a variety of other components.  Most users will not interact directly
      with this package.</description>
  <author email="yue.erro@pal-robotics.com">Yue Erro</author>
  <author email="andrea.capodacqua@pal-robotics.com">Andrea Capodacqua</author>
  <maintainer email="yue.erro@pal-robotics.com">Yue Erro</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <build_depend condition="$PAL_DISTRO >= alum">pal_module_cmake</build_depend>

  <exec_depend>xacro</exec_depend>
  <exec_depend>pmb2_description</exec_depend>
  <exec_depend>launch_pal</exec_depend>
  <exec_depend>gazebo_plugins</exec_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>urdf_test</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
